# PDF-GPT4-JSON

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  runtest.sh
pdf_gpt4_json/: __init__.py  cli.py  gpt.py  main.py  util.py
prompt_templates/: irs-990-pf.text
tests/: __init__.py  test_util.py
